--- a/.makemocks.yaml
+++ b/.makemocks.yaml
@@ -1,7 +1,9 @@
 log-level: debug
+disable-color: True
+config: "hello"
 packages:
     DEFAULT:
-        test1: "default1"
-        test2: "default2"
-    github.com/LandonTClipp/makemocks/...:
-        test2: "hello world"
+        test1: test1_default
+        test2: test2_default
+    github.com/LandonTClipp/makemocks:
+        test1: test1_landon
